--- a/content/tutorials/0010-intro-to-r/index.Rmd
+++ b/content/tutorials/0010-intro-to-r/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to R"
 author: "George Self"
-date: 2018-10-29T08:00:00-07:00
+#date: 2018-10-29T08:00:00-07:00
 categories: ["r"]
 tags: ["tutorial"]
 ---
