Added MathJax link to the header partial

--- a/content/post/simple-regres/index.Rmd
+++ b/content/post/simple-regres/index.Rmd
@@ -2,6 +2,7 @@
 title: "Simple Regression"
 author: "George Self"
 date: 2018-10-16T08:00:00-07:00
+mathjax: true
 description: "-- Exploring Simple Regression Models --"
 categories: ["r"]
 tags: ["correlogram","ggplot","plotly","regression"]
